fixed survey bars, were not visible

--- a/css/pages/detail.scss
+++ b/css/pages/detail.scss
@@ -1,26 +1,29 @@
 #detail {
-/*  .progressbar {
+  .progressbar {
     background-color: #fff;
     width: 400px;
     border-radius: 13px;
-    padding: 3px;
+    padding: 5px;
     height: 22px;
     margin:10px;
   }
 
   .progressbar > div {
-     background-color: $yellow;
+     background-color: $teal;
      height: 100%;
      border-radius: 10px;
      width:0;
      line-height: 22px;
      text-align: right;
-     color:#eee;
   }
 
   .col-md-3 {
     font-weight:400;
-  }*/
+  }
 
+  .container {
+    margin-top: 50px;
+    width:90%;
+  }
   
 }
